2016-01-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	* src/gstttmlenums.h:
	* src/gstttmlrender.c:
	* src/gstttmlutils.c:
	Implement SMPTE-TT background image alignment attributes.

2015-01-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c:
	(gst_ttmlrender_decode_image_from_saved_data),
	(gst_ttmlrender_retrieve_image), (gst_ttmlrender_new_region),
	(gst_ttmlrender_free_region), (gst_ttmlrender_dispose),
	(gst_ttmlrender_init):
	* src/gstttmlrender.h:
	Cache decoded images to avoid decoding them each time they are needed.

2015-01-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_render_outline):
	Fix leak on blurred spans.

2015-01-14  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_cairo_read_memory_func),
	(gst_ttmlrender_decode_embedded_image),
	(gst_ttmlrender_new_region), (gst_ttmlrender_show_regions),
	(gst_ttmlrender_free_region):
	* src/gstttmlstate.c: (gst_ttml_state_restore_data):
	* src/gstttmlstate.h:
	First working version of embedded images in SMPTE-TT.

2015-01-12  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_copy):
	Copy SMPTE background image names properly.

2015-01-12  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_free):
	* src/gstttmlrender.c: (gst_ttmlrender_show_layout):
	Fix a couple small leaks.

2015-01-09  Xavi Artigas  <xartigas@fluendo.com>

	* src\gstttmlattribute.c:
	* src\gstttmlattribute.h:
	* src\gstttmlbase.c:
	* src\gstttmlbase.h:
	* src\gstttmlenums.h:
	* src\gstttmlstate.c:
	* src\gstttmlstate.h:
	* src\gstttmlutils.c:
	* src\gstttmlutils.h:
	Start parsing SMPTE-TT-related stuff. image nodes and related attributes
	are parsed, but no rendering occurs yet.

2015-01-08  Xavi Artigas  <xartigas@fluendo.com>

	* configure.ac:
	Pango, Pangocairo and Pixman are not optional. Make sure configure
	aborts if they are not found.
